--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             </div>
         </nav>
         <!-- Banner section -->
-        <div class="carousel w-full mt-14">
+        <div class="carousel w-full mt-14 relative">
             <!-- first slide -->
             <div id="slide1" class="carousel-item relative w-full">
-              <div class="items-center w-full justify-center"><img src="/images/banner1.png" class="w-full" /></div>
-              <div class="absolute top-0 bottom-0 w-full">
-                <h3 class="text-xl lg:text-7xl font-extrabold text-white text-center pt-4 lg:pt-14">Exotic tastes at your 
+              <img src="/images/banner1.png" class="rounded-lg w-full h-full" />
+              <div class="absolute top-0 bottom-0 w-full bg-black bg-opacity-40">
+                <h3 class="text-xl lg:text-7xl font-extrabold text-white text-center pt-4 lg:pt-28">Exotic tastes at your 
                     <br>doorstep</h3>
                 <p class="font-normal text-white text-xs lg:text-xl text-center" >We supply highly quality organic products</p>
-                <button class="flex btn m-auto text-white border-0 bg-[#F85559] p-25 mt-7 text-center">Shop Now</button>
+                <button class="flex btn m-auto text-white border-0 bg-[#F85559] p-25 mt-7 ">Shop Now</button>
               </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
@@ -81,8 +81,8 @@
             <!-- second slide -->
             <div id="slide2" class="carousel-item relative w-full">
               <img src="/images/banner2.png" class="w-full" />
-              <div class="absolute top-0 bottom-0 w-full">
-                <h3 class="text-xl lg:text-7xl font-extrabold text-white text-center pt-4 lg:pt-14">Exotic tastes at your 
+              <div class="absolute top-0 bottom-0 w-full  bg-black bg-opacity-40">
+                <h3 class="text-xl lg:text-7xl font-extrabold text-white text-center pt-4 lg:pt-28">Exotic tastes at your 
                     <br>doorstep</h3>
                 <p class="font-normal text-white text-xs lg:text-xl text-center" >We supply highly quality organic products</p>
                 <button class="flex btn m-auto  text-white border-0 bg-[#F85559] p-25 mt-7 text-center">Shop Now</button>
@@ -95,8 +95,8 @@
             <!-- third slide -->
             <div id="slide3" class="carousel-item relative w-full">
               <img src="/images/banner3.png" class="w-full" />
-              <div class="absolute top-0 bottom-0 w-full">
-                <h3 class="text-xl lg:text-7xl font-extrabold text-white text-center pt-4 lg:pt-14">Exotic tastes at your 
+              <div class="absolute top-0 bottom-0 w-full  bg-black bg-opacity-40">
+                <h3 class="text-xl lg:text-7xl font-extrabold text-white text-center pt-4 lg:pt-28">Exotic tastes at your 
                     <br>doorstep</h3>
                 <p class="font-normal text-white text-xs lg:text-xl text-center" >We supply highly quality organic products</p>
                 <button class="flex btn m-auto  text-white border-0 bg-[#F85559] p-25 mt-7 text-center">Shop Now</button>
@@ -109,8 +109,8 @@
             <!-- fourth slide -->
             <div id="slide4" class="carousel-item relative w-full">
               <img src="/images/banner4.png" class="w-full" />
-              <div class="absolute top-0 bottom-0 w-full">
-                <h3 class="text-xl lg:text-7xl font-extrabold text-white text-center pt-4 lg:pt-14">Exotic tastes at your 
+              <div class="absolute top-0 bottom-0 w-full  bg-black bg-opacity-40">
+                <h3 class="text-xl lg:text-7xl font-extrabold text-white text-center pt-4 lg:pt-28">Exotic tastes at your 
                     <br>doorstep</h3>
                 <p class="font-normal text-white text-xs lg:text-xl text-center" >We supply highly quality organic products</p>
                 <button class="flex btn m-auto text-white border-0 bg-[#F85559] p-25 mt-7 text-center">Shop Now</button>
@@ -119,6 +119,28 @@
                 <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
               </div>
+            </div>
+          </div>
+          <div class="flex flex-col lg:flex-row relative w-9/12 lg:-top-20 shadow-lg shadow-indigo-500/40  rounded-lg bg-white p-12 m-auto shadow-slate-800 text-center items-center justify-between ">
+            <div class="">
+              <img src="images/fruit1.png" alt="">
+              <h4>Grape</h4>
+            </div>
+            <div>
+              <img src="images/fruit2.png" alt="">
+              <h4>Orange</h4>
+            </div>
+            <div>
+              <img src="images/fruit3.png" alt="">
+              <h4>Mango</h4>
+            </div>
+            <div>
+              <img src="images/fruit4.png" alt="">
+              <h4>Strawberry</h4>
+            </div>
+            <div>
+              <img src="images/fruit5.png" alt="">
+              <h4>Pomegranate</h4>
             </div>
           </div>
     </header>
