--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
           <div>
             <span class="countdown text-5xl font-extrabold pb-2">
               <span style="--value:15;"></span>
-            </span><span class="text-5xl px-10">:</span><br>
+            </span>
+            <span class="text-5xl px-10">:</span><br>
             <span class="font-medium text-base text-[#12121299]">Days</span>
           </div>
           <div>
@@ -187,7 +188,8 @@
           </div>
         </div>
       </div>
-      <div class="grid grid-cols-4 mt-12 gap-6">
+      <!-- modal container -->
+      <div class="grid grid-cols-1 mx-6 lg:mx-auto lg:grid-cols-4 mt-12 gap-6">
         <!-- card-1 -->
         <div class="card bg-white border rounded-lg border-[#12121226]">
           <figure class="py-12">
@@ -208,11 +210,11 @@
             <a href="#my_modal_1" class="btn bg-white border-none font-bold text-lg text-[#F85559]">Details</a>
             <div class="modal" id="my_modal_1">
               <div class="modal-box">
-                <figure><img src="./images/fruit6.png" alt=""
-                  ></figure>
+                <figure><img src="./images/fruit6.png" alt=""></figure>
                 <h3 class="text-center pt-6
                 font-extrabold text-4xl font-lato">Apples</h3>
-                <p class="py-4 px-10 font-lato text-center text-base font-medium text-[#12121299">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="py-4 px-10 font-lato text-center text-base font-medium text-[#12121299">Professional employees
+                  are there for you to pick the most amazing and fresh fruits.</p>
                 <div class="rating flex justify-center">
                   <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
                   <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
@@ -256,11 +258,11 @@
             <a href="#my_modal_2" class="btn bg-white border-none font-bold text-lg text-[#F85559]">Details</a>
             <div class="modal" id="my_modal_2">
               <div class="modal-box">
-                <figure><img src="./images/fruit7.png" alt=""
-                  ></figure>
+                <figure><img src="./images/fruit7.png" alt=""></figure>
                 <h3 class="text-center pt-6
                 font-extrabold text-4xl font-lato">Orange</h3>
-                <p class="py-4 px-10 font-lato text-center text-base font-medium text-[#12121299">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="py-4 px-10 font-lato text-center text-base font-medium text-[#12121299">Professional employees
+                  are there for you to pick the most amazing and fresh fruits.</p>
                 <div class="rating flex justify-center">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
@@ -304,11 +306,11 @@
             <a href="#my_modal_3" class="btn bg-white border-none font-bold text-lg text-[#F85559]">Details</a>
             <div class="modal" id="my_modal_3">
               <div class="modal-box">
-                <figure><img src="./images/fruit8.png" alt=""
-                  ></figure>
+                <figure><img src="./images/fruit8.png" alt=""></figure>
                 <h3 class="text-center pt-6
                 font-extrabold text-4xl font-lato">Apples</h3>
-                <p class="py-4 px-10 font-lato text-center text-base font-medium text-[#12121299">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="py-4 px-10 font-lato text-center text-base font-medium text-[#12121299">Professional employees
+                  are there for you to pick the most amazing and fresh fruits.</p>
                 <div class="rating flex justify-center">
                   <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
                   <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" checked />
@@ -352,11 +354,11 @@
             <a href="#my_modal_4" class="btn bg-white border-none font-bold text-lg text-[#F85559]">Details</a>
             <div class="modal" id="my_modal_4">
               <div class="modal-box">
-                <figure><img src="./images/fruit9.png" alt=""
-                  ></figure>
+                <figure><img src="./images/fruit9.png" alt=""></figure>
                 <h3 class="text-center pt-6
                 font-extrabold text-4xl font-lato">Banana</h3>
-                <p class="py-4 px-10 font-lato text-center text-base font-medium text-[#12121299">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                <p class="py-4 px-10 font-lato text-center text-base font-medium text-[#12121299">Professional employees
+                  are there for you to pick the most amazing and fresh fruits.</p>
                 <div class="rating flex justify-center">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
@@ -381,6 +383,77 @@
           </div>
         </div>
       </div>
+      <div class="flex justify-center">
+        <button class="btn rounded-lg bg-[#F85559] border-0 text-white text-center mt-10 px-7">
+          Shop All
+        </button>
+      </div>
+    </section>
+    <!-- meet the team section -->
+    <section class="lg:container lg:mx-auto mt-40">
+      <div class="flex flex-col lg:flex-row relative">
+        <img src="./images/banner1.png" alt="" class=" lg:w-full lg:h-full">
+        <div class="absolute top-0 bottom-0 rounded-lg w-full bg-black bg-opacity-50">
+          <h3 class="text-5xl font-extrabold text-white text-center mt-28 mb-6">Meet the team section</h3>
+          <p class="text-white text-base font-medium text-center">Contrary to popular belief, is not simply random text.
+            It has roots in a piece of classical
+            <br>
+            Latin literature from 45 BC, making it over 2000 years old.
+          </p>
+          <!-- team members -->
+          <div class="grid grid-cols-1 lg:grid-cols-4 mt-12 px-60">
+            <div class="card">
+              <figure><img src="./images/member1.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="text-center text-white text-2xl font-bold">Awlad Hossain</h2>
+                <p class="text-white font-medium text-base text-center ">Fruits Expert</p>
+                <ul class="flex gap-2 justify-center mt-4">
+                  <li><a href=""><img src="./images/facebook 1 (1).png" alt=""></a></li>
+                  <li><a href=""><img src="./images/twitter (1) 1.png" alt=""></a></li>
+                  <li><a href=""><img src="./images/linkedin 1 (1).png" alt=""></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="card">
+              <figure><img src="./images/member2.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="text-center text-white text-2xl font-bold">Safia Chowdhury</h2>
+                <p class="text-white font-medium text-base text-center ">Fruits Expert</p>
+                <ul class="flex gap-2 justify-center mt-4">
+                  <li><a href=""><img src="./images/facebook 1 (1).png" alt=""></a></li>
+                  <li><a href=""><img src="./images/twitter (1) 1.png" alt=""></a></li>
+                  <li><a href=""><img src="./images/linkedin 1 (1).png" alt=""></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="card">
+              <figure><img src="./images/member3.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="text-center text-white text-2xl font-bold">Rokib Hossain</h2>
+                <p class="text-white font-medium text-base text-center ">Fruits Expert</p>
+                <ul class="flex gap-2 justify-center mt-4">
+                  <li><a href=""><img src="./images/facebook 1 (1).png" alt=""></a></li>
+                  <li><a href=""><img src="./images/twitter (1) 1.png" alt=""></a></li>
+                  <li><a href=""><img src="./images/linkedin 1 (1).png" alt=""></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="card">
+              <figure><img src="./images/member4.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="text-center text-white text-2xl font-bold">Chaity</h2>
+                <p class="text-white font-medium text-base text-center ">Fruits Expert</p>
+                <ul class="flex gap-2 justify-center mt-4">
+                  <li><a href=""><img src="./images/facebook 1 (1).png" alt=""></a></li>
+                  <li><a href=""><img src="./images/twitter (1) 1.png" alt=""></a></li>
+                  <li><a href=""><img src="./images/linkedin 1 (1).png" alt=""></a></li>
+                </ul>
+              </div>
+            </div>
+            
+          </div>
+
+        </div>
     </section>
   </main>
 
